Lang features base Parsing and LExing Tokenizations started

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,12 @@
         "ranges": "c",
         "functional": "c",
         "stdlib.h": "c",
-        "io.h": "c"
+        "io.h": "c",
+        "ctype.h": "c",
+        "parser.h": "c",
+        "token.h": "c",
+        "ast.h": "c",
+        "list.h": "c",
+        "types.h": "c"
     }
 }
